--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<a href="https://instagram.com" target="_blank" class="Insta">Instagram</a>
-	<a href="https://instagram.com" target="_blank"><img src="Instagram logo.png" alt="Instagram" id="Logo"></a>
+	<a href="https://instagram.com" target="_blank"><img src="Instagram_logo.png" alt="Instagram" id="Logo"></a>
 	<hr>
 	<table class="Tabelica">
 		<tr>
@@ -35,5 +35,19 @@
 			<td>4c</td>
 		</tr>
     </table>
+    <hr>
+    <ol type="I">
+    	<li>Emir</li>
+    	<li>Rok</li>
+    	<li>Nejc</li>
+    	<li>Luka</li>
+    </ol>
+    <hr>
+    <ul type="square">
+    	<li>Aleš</li>
+    	<li>Mario</li>
+    	<li>Anica</li>
+    	<li>Samo</li>
+    </ul>
 </body>
 </html>
